k8s-templates/ingress-frontend/ingress-frontend.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-frontend
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type,Authorization"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  rules:
  - host: regulatory-department.local
    http:
      paths:
      - backend:
          serviceName: frontend-regulatory-department
          servicePort: 80
  - host: producer.local
    http:
      paths:
      - backend:
          serviceName: frontend-producer
          servicePort: 80
  - host: manufacturer.local
    http:
      paths:
      - backend:
          serviceName: frontend-manufacturer
          servicePort: 80
  - host: deliverer.local
    http:
      paths:
      - backend:
          serviceName: frontend-deliverer
          servicePort: 80
  - host: retailer.local
    http:
      paths:
      - backend:
          serviceName: frontend-retailer
          servicePort: 80
